# GSMP

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  GSMP.sln  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  🚀-feature-request.md
docs/: CONTRIBUTING.md  readme.md
docs/PlantUML/: README.md
docs/PlantUML/diagrams/src/: ClassDiagram-ModelVariable.puml  L1_SystemContextDiagram.puml  L2_ContainerDiagram.puml  L3_ComponentDiagram-Model.puml  L3_ComponentDiagram-SimulationScriptEngine.puml  L3_ComponentDiagram-UserInterface.puml  L4_ClassDiagram-Variable.puml
docs/PlantUML/diagrams/src/L2_ContainerDiagrams/: L2_ContainerDiagram.puml
docs/PlantUML/diagrams/src/L3_ComponentDiagrams/: L3_ComponentDiagram-Model.puml  L3_ComponentDiagram-ModelManager.puml  L3_ComponentDiagram-SimulationManager.puml
docs/PlantUML/diagrams/src/L4_ClassDiagrams/: L4_ClassDiagram-Model.puml  L4_ClassDiagram-Variable.puml  L4_ClassDiagram-VariableManager.puml
docs/PlantUML/diagrams/src/SequenceDiagrams/: SequenceDiagram-RunSimulation.puml
src/GSMP.CLI/: Program.cs
src/GSMP.Model/: IModel.cs  IModelVariable.cs  Model.cs  ModelVariable.cs
src/GSMP.Model.C/: GSMP.Model.C.vcxproj  GSMP_Model.c  GSMP_Model.h  GSMP_ModelTypes.h
src/GSMP.Model.C/include/: GSMP_model.h  GSMP_model_types.h
src/GSMP.Model.C/src/: model.c
src/GSMP.Model.CPP/: CMakeLists.txt
src/GSMP.Model.CPP/include/: GSMP_model_types.h  model.h
src/GSMP.Model.CPP/src/: model.cpp
src/GSMP.Model.CPPModel/include/: model.h
src/GSMP.Model.CPPModel/src/: model.cpp
src/GSMP.Model.CSharp/: CSharpModel.cs  GSMP.Model.CSharp.csproj
src/GSMP.ModelManager/: Class1.cs  ModelManager.cs  ModelVariable.cs
src/GSMP.UserInterface/: Program.cs
src/GSMP.UserInterface/Components/: App.razor  _Imports.razor
src/GSMP.UserInterface/Components/Layout/: NavMenu.razor
src/GSMP.UserInterface/Components/Pages/: Home.razor
src/GSMP.UserInterface/Properties/: launchSettings.json
src/api/: CMakeLists.txt
src/api/include/: enums.h  linkage.h  model.h  model_api.h  types.h  variable_manager.h  variable_manager_api.h
src/api/src/: GSMP_Model_API.cpp  model.cpp  variable_manager.cpp
src/cli/: CMakeLists.txt  cli.cpp
src/gsmp/: CMakeLists.txt
src/gsmp/include/: model.h  model_variable.h  variable_manager.h
src/gsmp/src/: model.cpp  model_variable.cpp  variable_manager.cpp
src/models/C/: CMakeLists.txt
src/models/C/include/: GSMP_Model_API.h  GSMP_enums.h  GSMP_model_types.h
src/models/C/src/: GSMP_Model_API.cpp
src/models/CPP/: CMakeLists.txt
src/models/CPP/include/: model.h  model_types.h  model_variable.h
src/models/CPP/src/: model.cpp  model_variable.cpp
src/models/c/include/: GSMP_Model_API.h  GSMP_VariableManager_API.h  GSMP_enums.h  GSMP_model_types.h  GSMP_types.h
src/models/c/src/: GSMP_VariableManager_API.cpp
test/GSMP.Model.CSharp.Tests/: CSharpModelTests.cs  GSMP.Model.CSharp.Tests.csproj
test/GSMP.Model.Tests/: GSMP.Model.Tests.csproj  ModelVariableTests.cs
test/GSMP.ModelManager.Tests/GSMP.ModelManager.Tests/: GSMP.ModelManager.Tests.csproj  ModelVariableTests.cs
test/unit/: CMakeLists.txt
test/unit/gsmp/: model_test.cpp  model_variable_test.cpp  variable_manager_test.cpp
